# airflow_sandbox

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
airflow_sandbox/: dag_template.py  generate_dag_files.py
airflow_sandbox/dag_config/: dag1-config.json  dag2-config.json
dags/: dynamic_dags.py
dags/dynamic_dags_multiple_files/: dag_file_1.py  dag_file_2.py  dynamic_dags_multiple_files.dag_file_1.py  dynamic_dags_multiple_files.dag_file_2.py
dags/dynamic_dags_one_file/: dynamic_dags_one_file.py
dags/task_flow/: task_flow.py
dags/task_group/: task_group.py
